# PennyPal

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Justfile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 5624dc19be0a_initial_schema.py  6614d411475b_initial.py  a1b2c3d4e5f6_add_uq_group_member.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  chatbot.py  expenses.py  groups.py  settlements.py  users.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  expense.py  group.py  settlement.py  user.py
backend/app/schemas/: chatbot.py  expense.py  group.py  settlement.py  user.py
backend/app/services/: chatbot_service.py  expense_service.py  settlement_service.py
backend/src/application/commands/: add_group_member.py  create_expense.py  create_group.py  create_settlement.py  login_user.py  register_user.py  send_chat_message.py  update_settlement.py
backend/src/application/queries/: get_balances.py  get_group_expenses.py  get_settlement_suggestions.py  get_user_groups.py
backend/src/domain/: exceptions.py
backend/src/domain/entities/: expense.py  group.py  settlement.py  (+1 more)
backend/src/infrastructure/: app.py  config.py  container.py  database.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_chatbot_api.py  test_expenses_api.py  test_groups_api.py  test_settlements_api.py  test_users_api.py
(+81 files in other folders)
